<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Motion Info</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    
    <!-- main -->
    <string name="main_title">运动量检测</string>
    <string name="bt_pedometer">步数统计</string>
    <string name="bt_realtime">实时状态检测</string>
    <string name="bt_history">历史状态查询</string>
    <string name="bt_about">关于</string>
    <string name="bt_exit">退出</string>
    
    <!-- pedometer -->
    <string name="pedometer_title">计步器</string>
    <string name="pedometer_motion_status">运动状态</string>
    <string name="step_number">步数</string> 
    
    <!-- realtime -->
    <string name="realtime_title">实时状态检测</string>
	<string name="realtime_motion_status">运动状态</string>
	<string name="current_history">当前历史</string>
	

    <!-- devicelist -->
	<string name="title_paired_devices">已配对设备</string>
	<string name="title_other_devices">其它设备</string>
	<string name="button_scan">搜索</string>
	<string name="scanning">正在搜索</string>
    <string name="select_device">选择一个设备连接</string>
    <string name="none_paired">无配对设备</string>
    <string name="none_found">没有找到新的设备</string>
    
    
    <!-- history -->
	<string name="history_title">历史状态查询</string>
	<string name="history_spinner">请选择时间</string>
	<string name="history_content">历史状态</string>
	
    
    <!-- about -->
	<string name="about_title">关于Motion Info</string>
	<string name="about_content">本软件Motion Info属于课题为“基于MEMS加速度传感器的运动量检测”\
	    的毕业设计的一部分，是完整运动量检测系统的手机终端。\n\n
	 [功能介绍]\n\n
	 步数统计：可以显示在行走、跑步状态下用户的步数，是一个计步器。\n\n
	 实时状态检测： 通过蓝牙通信，将检测功能块判断出来的当前结果（当前运动状态）实时地显示于手机终端\n\n
	 历史状态查询： 可查询历史内用户的所有运动状态</string>

</resources>
